k8s/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookhub-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookhub-db
  template:
    metadata:
      labels:
        app: bookhub-db
    spec:
      containers:
        - name: bookhub-db
          image: mysql:8
          ports:
            - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: bookhub-db
spec:
  selector:
    app: bookhub-db
  ports:
    - port: 3306
      targetPort: 3306
