k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookhub-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookhub-frontend
  template:
    metadata:
      labels:
        app: bookhub-frontend
    spec:
      containers:
        - name: bookhub-frontend
          image: bookhub-frontend:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
apiVersion: v1
kind: Service
metadata:
  name: bookhub-frontend
spec:
  selector:
    app: bookhub-frontend
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30146
  type: NodePort
