k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: social-media-service
spec:
  selector:
    app: social-media
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
